--- a/haber.html
+++ b/haber.html
@@ -276,6 +276,122 @@
             letter-spacing: 0.5px;
         }
 
+        .explosives-image-grid {
+            display: grid;
+            grid-template-columns: repeat(3, minmax(0, 1fr));
+            gap: 16px;
+            margin-top: 24px;
+        }
+
+        .explosives-image-slot {
+            position: relative;
+            min-height: 180px;
+            border: 2px dashed rgba(125, 211, 252, 0.8);
+            border-radius: 12px;
+            background: rgba(125, 211, 252, 0.08);
+            color: rgba(255, 255, 255, 0.88);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            padding: 12px;
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        .explosives-image-slot h3 {
+            margin: 0;
+            color: #7dd3fc;
+            font-family: 'Montserrat', sans-serif;
+            font-size: 1.1rem;
+            font-weight: 700;
+        }
+
+        .explosives-image-slot img {
+            width: 100%;
+            max-height: 150px;
+            object-fit: contain;
+            display: block;
+        }
+
+        .explosives-hover-note {
+            position: absolute;
+            left: 8px;
+            right: 8px;
+            bottom: 8px;
+            padding: 10px 12px;
+            border-radius: 10px;
+            background: rgba(0, 0, 0, 0.9);
+            border: 1px solid rgba(125, 211, 252, 0.65);
+            color: #eaf7ff;
+            font-size: 0.78rem;
+            line-height: 1.35;
+            text-align: left;
+            opacity: 0;
+            transform: translateY(8px);
+            pointer-events: none;
+            transition: opacity 0.2s ease, transform 0.2s ease;
+            z-index: 8;
+        }
+
+        .explosives-image-slot:hover .explosives-hover-note {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        .explosives-card .explosion-burst {
+            position: absolute;
+            top: 42%;
+            left: 50%;
+            width: 180px;
+            height: 180px;
+            transform: translate(-50%, -50%) scale(0.35);
+            opacity: 0;
+            pointer-events: none;
+            z-index: 6;
+        }
+
+        .explosion-burst .boom {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 3.2rem;
+            filter: drop-shadow(0 0 10px rgba(255, 120, 0, 0.7));
+        }
+
+        .explosion-burst .ring {
+            position: absolute;
+            inset: 10px;
+            border-radius: 50%;
+            border: 3px solid rgba(255, 160, 64, 0.8);
+        }
+
+        .explosives-card:hover .explosion-burst {
+            animation: burstFlash 0.45s ease-out;
+        }
+
+        @keyframes burstFlash {
+            0% {
+                opacity: 0;
+                transform: translate(-50%, -50%) scale(0.35);
+            }
+            35% {
+                opacity: 1;
+                transform: translate(-50%, -50%) scale(1);
+            }
+            100% {
+                opacity: 0;
+                transform: translate(-50%, -50%) scale(1.25);
+            }
+        }
+
+        @media (max-width: 768px) {
+            .explosives-image-grid {
+                grid-template-columns: 1fr;
+            }
+        }
+
         .slider-container {
             position: relative;
             width: 100%;
@@ -1250,6 +1366,48 @@
                     </div>
                 </div>
             </div>
+
+            <button class="nav-button slide-up-init" onclick="showExplosivesManufacturing()">
+                Next →
+            </button>
+        </div>
+    </div>
+
+    <!-- Manufacturing of Explosives Page -->
+    <div class="page" id="explosivesManufacturingPage">
+        <button class="back-button" onclick="showPracticalExamples()">← Back</button>
+        
+        <div class="container">
+            <h1>Practical Examples</h1>
+            <p class="subtitle">Real-World Applications and Industrial Processes</p>
+
+            <h2 class="section-title">2. Manufacturing of Explosives</h2>
+
+            <div class="info-text slide-up-init">
+                <p>Chemical companies utilize the ammonia from Haber plants to produce nitric acid (HNO<sub>3</sub>) (which uses the Ostwald Process). Nitric acid plants can be found worldwide in integrated chemical facilities (e.g. BASF in Germany).</p>
+            </div>
+
+            <div class="explosives-image-grid slide-up-init">
+                <div class="explosives-image-slot">
+                    <h3>Haber</h3>
+                    <img src="images/ammonia-factory-removebg-preview.png" alt="Haber manufacturing plant">
+                    <div class="explosives-hover-note"><strong>Haber Process:</strong> N<sub>2</sub>(g) + 3H<sub>2</sub>(g) &rarr; 2NH<sub>3</sub>(g)</div>
+                </div>
+                <div class="explosives-image-slot">
+                    <h3>Ostwald</h3>
+                    <img src="images/ostwald.png" alt="Ostwald process plant">
+                    <div class="explosives-hover-note"><strong>Ammonia</strong> from the Haber is oxidized to nitric oxide in the <strong>Ostwald Process</strong>: 4NH<sub>3</sub> + 5O<sub>2</sub> &rarr; 4NO + 6H<sub>2</sub>O. Nitric oxide further oxidizes: 2NO + O<sub>2</sub> &rarr; 2NO<sub>2</sub>. Then dissolves in water: 3NO<sub>2</sub> + H<sub>2</sub>O &rarr; 2HNO<sub>3</sub> + NO, to form <strong>nitric acid (HNO<sub>3</sub>)</strong>.</div>
+                </div>
+                <div class="explosives-image-slot explosives-card">
+                    <h3>Explosives</h3>
+                    <div class="explosion-burst" aria-hidden="true">
+                        <div class="ring"></div>
+                        <div class="boom">💥</div>
+                    </div>
+                    <img src="images/velika-06-TNT-DNT-copy-removebg-preview.png" alt="Explosives manufacturing plant">
+                    <div class="explosives-hover-note"><strong>Nitric acid</strong>, with the ammonia feedstock from the <strong>Haber Process</strong> as the fundamental step, is used to produce nitrogen-based explosives like <strong>TNT</strong> or <strong>Ammonium Nitrate Fuel Oil (ANFO)</strong>.</div>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -1260,6 +1418,7 @@
         let hasAnimatedEnvironmentalImpact = false;
         let hasAnimatedConcerns = false;
         let hasAnimatedPracticalExamples = false;
+        let hasAnimatedExplosivesManufacturing = false;
 
         // Navigation functions
         function showFoodProduction() {
@@ -1321,6 +1480,7 @@
             document.getElementById('environmentalImpactPage').classList.remove('active');
             document.getElementById('concernsPage').classList.add('active');
             document.getElementById('practicalExamplesPage').classList.remove('active');
+            document.getElementById('explosivesManufacturingPage').classList.remove('active');
 
             // Trigger slide-up animation only the first time
             if (!hasAnimatedConcerns) {
@@ -1336,6 +1496,7 @@
         function showPracticalExamples() {
             document.getElementById('concernsPage').classList.remove('active');
             document.getElementById('practicalExamplesPage').classList.add('active');
+            document.getElementById('explosivesManufacturingPage').classList.remove('active');
 
             // Trigger slide-up animation only the first time
             if (!hasAnimatedPracticalExamples) {
@@ -1345,6 +1506,20 @@
                     el.classList.add('slide-up-animate');
                 });
                 hasAnimatedPracticalExamples = true;
+            }
+        }
+
+        function showExplosivesManufacturing() {
+            document.getElementById('practicalExamplesPage').classList.remove('active');
+            document.getElementById('explosivesManufacturingPage').classList.add('active');
+
+            if (!hasAnimatedExplosivesManufacturing) {
+                const animatedBlocks = document.querySelectorAll('#explosivesManufacturingPage .slide-up-init');
+                animatedBlocks.forEach((el, index) => {
+                    el.style.animationDelay = (index * 0.12) + 's';
+                    el.classList.add('slide-up-animate');
+                });
+                hasAnimatedExplosivesManufacturing = true;
             }
         }
 
@@ -1563,4 +1738,3 @@
     </script>
 </body>
 </html>
-
