--- a/haber.html
+++ b/haber.html
@@ -314,6 +314,246 @@
             display: block;
         }
 
+        .electro-connection-layout {
+            display: grid;
+            gap: 16px;
+        }
+
+        .electro-card {
+            border: 1px solid rgba(125, 211, 252, 0.5);
+            border-radius: 12px;
+            background: rgba(125, 211, 252, 0.08);
+            padding: 14px 16px;
+        }
+
+        .electro-card h3 {
+            margin: 0 0 8px;
+            color: #7dd3fc;
+            font-family: 'Montserrat', sans-serif;
+            font-size: 1.05rem;
+        }
+
+        .electro-card p {
+            margin: 0;
+            color: rgba(255, 255, 255, 0.95);
+            line-height: 1.6;
+        }
+
+        .equation-highlight {
+            margin-top: 8px;
+            text-align: center;
+            color: #7dd3fc;
+            font-size: 1.25rem;
+            font-weight: 700;
+            letter-spacing: 0.4px;
+        }
+
+        .electro-note {
+            margin: 4px 0 0;
+        }
+
+        .electro-image-placeholder,
+        .electro-animation-placeholder {
+            border: 2px dashed rgba(125, 211, 252, 0.75);
+            border-radius: 12px;
+            background: rgba(125, 211, 252, 0.07);
+            color: rgba(255, 255, 255, 0.85);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            padding: 14px;
+        }
+
+        .electro-image-placeholder {
+            min-height: 170px;
+            margin-top: 12px;
+        }
+
+        .electro-animation-placeholder {
+            min-height: 210px;
+            margin-top: 10px;
+        }
+
+        .reaction-chamber-animation {
+            --reaction-speed: 3.2s;
+            position: relative;
+            width: 100%;
+            min-height: 230px;
+            border: 2px dashed rgba(125, 211, 252, 0.75);
+            border-radius: 12px;
+            background: rgba(125, 211, 252, 0.07);
+            overflow: hidden;
+        }
+
+        .reaction-chamber {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            width: 230px;
+            height: 130px;
+            transform: translate(-50%, -50%);
+            border-radius: 16px;
+            border: 3px solid rgba(125, 211, 252, 0.9);
+            background: linear-gradient(160deg, rgba(30, 58, 90, 0.55), rgba(15, 23, 42, 0.8));
+            box-shadow: 0 0 24px rgba(125, 211, 252, 0.28);
+        }
+
+        .iron-oxide-mesh {
+            position: absolute;
+            left: 50%;
+            top: 22px;
+            bottom: 18px;
+            width: 5px;
+            transform: translateX(-50%);
+            border-radius: 4px;
+            background: linear-gradient(to bottom, #b15b38 0%, #8b3f23 55%, #6d2f1b 100%);
+            box-shadow: 0 0 7px rgba(177, 91, 56, 0.75);
+            opacity: 0;
+            transition: opacity 0.18s ease;
+        }
+
+        .iron-oxide-mesh.active {
+            opacity: 1;
+        }
+
+        .reaction-chamber::before {
+            content: "Reaction Chamber";
+            position: absolute;
+            top: 8px;
+            left: 50%;
+            transform: translateX(-50%);
+            font-family: 'Montserrat', sans-serif;
+            font-size: 0.75rem;
+            color: rgba(234, 247, 255, 0.9);
+            letter-spacing: 0.4px;
+        }
+
+        .reaction-pipe {
+            position: absolute;
+            top: 50%;
+            width: 70px;
+            height: 8px;
+            border-radius: 8px;
+            background: rgba(125, 211, 252, 0.75);
+        }
+
+        .reaction-pipe.left {
+            left: calc(50% - 184px);
+            transform: translateY(-50%);
+        }
+
+        .reaction-pipe.right {
+            left: calc(50% + 114px);
+            transform: translateY(-50%);
+        }
+
+        .gas-label {
+            position: absolute;
+            font-weight: 700;
+            color: #eaf7ff;
+            background: rgba(2, 6, 23, 0.82);
+            border: 1px solid rgba(125, 211, 252, 0.65);
+            border-radius: 999px;
+            padding: 5px 10px;
+            font-size: 0.92rem;
+            white-space: nowrap;
+        }
+
+        .gas-label.inlet {
+            top: 50%;
+            left: 8%;
+            transform: translateY(-50%);
+            animation: feedIntoChamber var(--reaction-speed) ease-in-out infinite;
+        }
+
+        .gas-label.inlet.second {
+            top: calc(50% + 32px);
+            animation-delay: 1.1s;
+        }
+
+        .gas-label.outlet {
+            top: 50%;
+            left: calc(50% + 132px);
+            transform: translateY(-50%) scale(0.92);
+            opacity: 0;
+            animation: outFromChamber var(--reaction-speed) ease-in-out infinite;
+            animation-delay: 1.6s;
+        }
+
+        .reaction-controls {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px 18px;
+            margin-top: 10px;
+            padding: 10px 12px;
+            border: 1px solid rgba(125, 211, 252, 0.4);
+            border-radius: 10px;
+            background: rgba(125, 211, 252, 0.06);
+        }
+
+        .reaction-control-item {
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+            color: rgba(255, 255, 255, 0.95);
+            font-size: 0.92rem;
+            cursor: pointer;
+            user-select: none;
+        }
+
+        .reaction-control-item input {
+            width: 16px;
+            height: 16px;
+            accent-color: #7dd3fc;
+            cursor: pointer;
+        }
+
+        @keyframes feedIntoChamber {
+            0% {
+                left: 8%;
+                opacity: 0;
+            }
+            15% {
+                opacity: 1;
+            }
+            60% {
+                left: calc(50% - 138px);
+                opacity: 1;
+            }
+            100% {
+                left: calc(50% - 110px);
+                opacity: 0;
+            }
+        }
+
+        @keyframes outFromChamber {
+            0% {
+                left: calc(50% + 108px);
+                opacity: 0;
+                transform: translateY(-50%) scale(0.9);
+            }
+            40% {
+                opacity: 0;
+            }
+            55% {
+                opacity: 1;
+                transform: translateY(-50%) scale(1);
+            }
+            100% {
+                left: 82%;
+                opacity: 0;
+                transform: translateY(-50%) scale(1);
+            }
+        }
+
+        .electro-techniques {
+            margin: 0;
+            padding-left: 20px;
+            color: rgba(255, 255, 255, 0.95);
+            line-height: 1.65;
+        }
+
         .explosives-hover-note {
             position: absolute;
             left: 8px;
@@ -1408,6 +1648,81 @@
                     <div class="explosives-hover-note"><strong>Nitric acid</strong>, with the ammonia feedstock from the <strong>Haber Process</strong> as the fundamental step, is used to produce nitrogen-based explosives like <strong>TNT</strong> or <strong>Ammonium Nitrate Fuel Oil (ANFO)</strong>.</div>
                 </div>
             </div>
+
+            <button class="nav-button slide-up-init" onclick="showConnectionToElectrochemistry()">
+                Next →
+            </button>
+        </div>
+    </div>
+
+    <!-- Connection to Electrochemistry Page -->
+    <div class="page" id="connectionToElectrochemistryPage">
+        <button class="back-button" onclick="showExplosivesManufacturing()">← Back</button>
+
+        <div class="container">
+            <h1>Connection to Electrochemistry</h1>
+
+            <div class="electro-connection-layout">
+                <div class="electro-card slide-up-init">
+                    <h3>Overall Chemical Reaction</h3>
+                    <p class="equation-highlight">N<sub>2</sub>(g) + 3H<sub>2</sub>(g) ⇌ 2NH<sub>3</sub>(g)</p>
+                </div>
+
+                <div class="electro-card slide-up-init">
+                    <h3>Oxidation and Reduction Roles</h3>
+                    <p><strong>Hydrogen</strong> is oxidized (0 to +1), each atom loses 1 electron, hydrogen gas (H<sub>2</sub>(g)) is the reducing agent.</p>
+                    <p class="electro-note"><strong>Nitrogen</strong> is reduced (0 to -3), each atom gains 3 electrons, nitrogen gas (N<sub>2</sub>(g)) is the oxidizing agent.</p>
+                    <div class="electro-image-placeholder">
+                        <img src="images/haber_redox_connection.png" alt="Haber redox connection diagram" style="max-width: 100%; max-height: 260px; object-fit: contain; display: block;">
+                    </div>
+                </div>
+
+                <div class="electro-card slide-up-init">
+                    <h3>Redox Connection</h3>
+                    <p>Redox reaction as oxidation and reduction happen simultaneously. Oxidation numbers change and electrons are transferred from hydrogen to nitrogen.</p>
+                </div>
+
+                <div class="electro-card slide-up-init">
+                
+                    <p>Because the actual industrial process is done in a gaseous state, not an electrochemical cell, standard reduction potentials are not useful, but shown to demonstrate the concept.</p>
+                </div>
+
+                <div class="electro-card slide-up-init">
+                    <h3>Techniques to Increase Rate of Reaction</h3>
+                    <ul class="electro-techniques">
+                        <li>Using an iron catalyst such as Fe<sub>2</sub>O<sub>3</sub> can weaken triple bonds of diatomic nitrogen particle.</li>
+                        <li>Increasing temperature increases rate of reaction. Raising it too far will reverse the reaction and decrease yield. Therefore, a “low” temperature of 450 degrees Celsius is used.</li>
+                        <li>Increasing the pressure will increase the rate of reaction.</li>
+                    </ul>
+                </div>
+
+                <div class="reaction-chamber-animation slide-up-init" id="reactionChamberAnimation" aria-label="Reaction chamber animation">
+                    <div class="reaction-pipe left" aria-hidden="true"></div>
+                    <div class="reaction-chamber" aria-hidden="true">
+                        <div class="iron-oxide-mesh" id="ironOxideMesh"></div>
+                    </div>
+                    <div class="reaction-pipe right" aria-hidden="true"></div>
+
+                    <div class="gas-label inlet">H<sub>2</sub>(g)</div>
+                    <div class="gas-label inlet second">N<sub>2</sub>(g)</div>
+                    <div class="gas-label outlet">NH<sub>3</sub>(g)</div>
+                </div>
+
+                <div class="reaction-controls slide-up-init" aria-label="Reaction rate controls">
+                    <label class="reaction-control-item">
+                        <input type="checkbox" class="reaction-rate-toggle" id="rateIronCatalyst">
+                        <span>Iron Catalyst</span>
+                    </label>
+                    <label class="reaction-control-item">
+                        <input type="checkbox" class="reaction-rate-toggle" id="rateHighTemp">
+                        <span>High Temperature (450&deg;C)</span>
+                    </label>
+                    <label class="reaction-control-item">
+                        <input type="checkbox" class="reaction-rate-toggle" id="rateHighPressure">
+                        <span>High Pressure</span>
+                    </label>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -1419,6 +1734,7 @@
         let hasAnimatedConcerns = false;
         let hasAnimatedPracticalExamples = false;
         let hasAnimatedExplosivesManufacturing = false;
+        let hasAnimatedConnectionToElectrochemistry = false;
 
         // Navigation functions
         function showFoodProduction() {
@@ -1481,6 +1797,7 @@
             document.getElementById('concernsPage').classList.add('active');
             document.getElementById('practicalExamplesPage').classList.remove('active');
             document.getElementById('explosivesManufacturingPage').classList.remove('active');
+            document.getElementById('connectionToElectrochemistryPage').classList.remove('active');
 
             // Trigger slide-up animation only the first time
             if (!hasAnimatedConcerns) {
@@ -1497,6 +1814,7 @@
             document.getElementById('concernsPage').classList.remove('active');
             document.getElementById('practicalExamplesPage').classList.add('active');
             document.getElementById('explosivesManufacturingPage').classList.remove('active');
+            document.getElementById('connectionToElectrochemistryPage').classList.remove('active');
 
             // Trigger slide-up animation only the first time
             if (!hasAnimatedPracticalExamples) {
@@ -1512,6 +1830,7 @@
         function showExplosivesManufacturing() {
             document.getElementById('practicalExamplesPage').classList.remove('active');
             document.getElementById('explosivesManufacturingPage').classList.add('active');
+            document.getElementById('connectionToElectrochemistryPage').classList.remove('active');
 
             if (!hasAnimatedExplosivesManufacturing) {
                 const animatedBlocks = document.querySelectorAll('#explosivesManufacturingPage .slide-up-init');
@@ -1520,6 +1839,20 @@
                     el.classList.add('slide-up-animate');
                 });
                 hasAnimatedExplosivesManufacturing = true;
+            }
+        }
+
+        function showConnectionToElectrochemistry() {
+            document.getElementById('explosivesManufacturingPage').classList.remove('active');
+            document.getElementById('connectionToElectrochemistryPage').classList.add('active');
+
+            if (!hasAnimatedConnectionToElectrochemistry) {
+                const animatedBlocks = document.querySelectorAll('#connectionToElectrochemistryPage .slide-up-init');
+                animatedBlocks.forEach((el, index) => {
+                    el.style.animationDelay = (index * 0.12) + 's';
+                    el.classList.add('slide-up-animate');
+                });
+                hasAnimatedConnectionToElectrochemistry = true;
             }
         }
 
@@ -1548,6 +1881,31 @@
                     void soilPlant.offsetWidth;
                     soilPlant.classList.add('sprout');
                 });
+            }
+
+            const reactionChamberAnimation = document.getElementById('reactionChamberAnimation');
+            const reactionRateToggles = document.querySelectorAll('.reaction-rate-toggle');
+            const ironCatalystToggle = document.getElementById('rateIronCatalyst');
+            const ironOxideMesh = document.getElementById('ironOxideMesh');
+
+            if (reactionChamberAnimation && reactionRateToggles.length > 0) {
+                const applyReactionRate = () => {
+                    const checkedCount = Array.from(reactionRateToggles).filter((toggle) => toggle.checked).length;
+                    const baseDuration = 3.2;
+                    const speedStep = 0.9;
+                    const nextDuration = Math.max(0.8, baseDuration - (checkedCount * speedStep));
+                    reactionChamberAnimation.style.setProperty('--reaction-speed', `${nextDuration}s`);
+
+                    if (ironCatalystToggle && ironOxideMesh) {
+                        ironOxideMesh.classList.toggle('active', ironCatalystToggle.checked);
+                    }
+                };
+
+                reactionRateToggles.forEach((toggle) => {
+                    toggle.addEventListener('change', applyReactionRate);
+                });
+
+                applyReactionRate();
             }
         });
 
