--- a/haber.html
+++ b/haber.html
@@ -421,8 +421,9 @@
             content: "Reaction Chamber";
             position: absolute;
             top: 8px;
-            left: 50%;
-            transform: translateX(-50%);
+            left: 0;
+            width: 100%;
+            text-align: center;
             font-family: 'Montserrat', sans-serif;
             font-size: 0.75rem;
             color: rgba(234, 247, 255, 0.9);
@@ -1658,6 +1659,7 @@
     <!-- Connection to Electrochemistry Page -->
     <div class="page" id="connectionToElectrochemistryPage">
         <button class="back-button" onclick="showExplosivesManufacturing()">← Back</button>
+        <button class="nav-button" onclick="restartPresentation()">Restart</button>
 
         <div class="container">
             <h1>Connection to Electrochemistry</h1>
@@ -1858,7 +1860,16 @@
 
         function showIntro() {
             document.getElementById('foodProductionPage').classList.remove('active');
+            document.getElementById('environmentalImpactPage').classList.remove('active');
+            document.getElementById('concernsPage').classList.remove('active');
+            document.getElementById('practicalExamplesPage').classList.remove('active');
+            document.getElementById('explosivesManufacturingPage').classList.remove('active');
+            document.getElementById('connectionToElectrochemistryPage').classList.remove('active');
             document.getElementById('introPage').classList.add('active');
+        }
+
+        function restartPresentation() {
+            showIntro();
         }
 
         // Intro page slide-up on first load
