--- a/haber.html
+++ b/haber.html
@@ -1351,7 +1351,7 @@
                 </div>
 
                 <h2>What it does</h2>
-                <p>Combines nitrogen gas (N₂), usually obtained from air, with hydrogen gas (H₂), under specific conditions to produce ammonia.</p>
+                <p>Combines nitrogen gas (N₂), usually obtained from air, with hydrogen gas (H₂), obtained from reacting methane (CH₄) with water, under specific conditions to produce ammonia.</p>
 
                 <div class="reaction-block">
                     <p style="margin: 0; color: white;"><strong>Overall chemical reaction:</strong></p>
@@ -1404,7 +1404,7 @@
         </div>
 
         <div class="info-text slide-up-init">
-            <p>Ammonia from the Haber Process creates nitrogen-based fertilizers for growing crops. Billions of people were fed, and widespread famine avoided.</p>
+            <p>Ammonia from the Haber Process creates nitrogen-based fertilizers for growing crops. In fact, 40% to 50% of all global primary crops and vegetables are grown via the Haber Process.</p>
         </div>
 
         <div class="stats slide-up-init">
